# recipoir-data-loader

./: .editorconfig  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
csv/: bam_18_1_1.csv
src/: food.rs  main.rs
src/db/: queries.rs
src/sources/: bam.rs  mod.rs  source.rs
