[package]
name = "data-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.1"
itertools = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
postgres = "0.19.9"
postgres-types = { version = "0.2.8", features = ["derive"] }
dotenvy = "0.15.7"
thiserror = "2.0.3"
derive_more = { version = "1.0.0", features = ["add", "display", "add_assign", "into"] }
bytes = "1.9.0"
tokio-postgres = "0.7.12"

[[bin]]
name = "data-loader"

[features]
nuke = []
